css/style.css
/* ... */
#timeline .timeline-item {
  margin-bottom: 50px;
  position: relative;
}
#timeline .timeline-item:before {
	content: '';
	display: block;
	width: 100%;
	clear: both;
}
#timeline .timeline-item:after {
	content: '';
	display: block;
	width: 100%;
	clear: both;
}
#timeline .timeline-item .timeline-icon {
  background: #83d3c9;
  width: 50px;
  height: 50px;
  position: absolute;
  top: 0;
  left: 50%;
  overflow: hidden;
  margin-left: -23px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
}
#timeline .timeline-item .timeline-icon svg {
  margin-top: 14px;
}
#timeline .timeline-item .timeline-content {
  width: 45%;
  background: #fff;
  padding: 20px 20px 15px 20px;
  -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
  -ms-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
#timeline .timeline-item .timeline-content h2 {
  padding: 15px;
  background: #83d3c9;
  color: #fff;
  margin: -20px -20px 0 -20px;
  font-weight: 900;
  -webkit-border-radius: 3px 3px 0 0;
  -moz-border-radius: 3px 3px 0 0;
  -ms-border-radius: 3px 3px 0 0;
  border-radius: 3px 3px 0 0;
}
#timeline .timeline-item .timeline-content:before {
  content: '';
  position: absolute;
  left: 45%;
  top: 20px;
  width: 0;
  height: 0;
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent;
  border-left: 7px solid #83d3c9;
}
#timeline .timeline-item .timeline-content.right {
  float: right;
}
#timeline .timeline-item .timeline-content.right:before {
  content: '';
  right: 45%;
  left: inherit;
  border-left: 0;
  border-right: 7px solid #83d3c9;
}

@media screen and (max-width: 768px) {
  #timeline {
    margin: 30px;
    padding: 0px;
    width: 90%;
  }
  #timeline:before {
    left: 0;
  }
  #timeline .timeline-item .timeline-content {
    width: 90%;
    float: right;
  }
  #timeline .timeline-item .timeline-content:before, #timeline .timeline-item .timeline-content.right:before {
    left: 10%;
    margin-left: -6px;
    border-left: 0;
    border-right: 7px solid #83d3c9;
  }
  #timeline .timeline-item .timeline-icon {
    left: 0;
  }
}

#timeline h2 {
	font-size: 1em;
	line-height: 1.2em;
}

#timeline p {
	margin: 1em 0 0.4em 0;
}

#timeline .timeline-item.last {
	margin-bottom: 100px;
}

#timeline .timeline-item .timeline-icon {
	text-align: center;
}

#timeline .timeline-item .timeline-icon .icon {
  font-size: 24px;
  color: #fff;
  line-height: 50px;
}

#timeline .timeline-item.follow {
	margin-top: -240px;
}

#timeline .timeline-item.follow .timeline-content {
	margin-top: -190px;
}

#timeline .timeline-item.follow.long {
	margin-top: -480px;
}

#timeline .timeline-item.follow.long .timeline-content {
	margin-top: -410px;
}

#timeline .timeline-item.follow .timeline-content.right {
	margin-top: 0;
}

@media screen and (max-width: 900px) {

}

@media screen and (max-width: 768px) {
	#timeline .timeline-item.follow {
		margin-top: 0;
	}

	#timeline .timeline-item.follow .timeline-content {
		margin-top: 0;
	}

	#timeline .timeline-item.follow .timeline-content.right {
		margin-top: 0;
	}

	#timeline .timeline-item.follow.long {
		margin-top: 0;
	}

	#timeline .timeline-item.follow.long .timeline-content {
		margin-top: 0;
	}
}

.timeline-image {
	width: 100%;
}

.wedding-day-details {
	margin-bottom: 2.4em;
}

